# mcmonad

./: .gitignore  CLAUDE.md  DEVELOPMENT.md  PLAN.md  README.md  TROUBLESHOOTING_WITH_NIX.md  flake.nix
.github/workflows/: ci.yml  release.yml
core/: Package.swift  bundle.sh
core/Sources/MCMonadCore/: Main.swift
core/Sources/MCMonadCore/Accessibility/: AXFocusTracker.swift  AXWindowService.swift
core/Sources/MCMonadCore/Display/: DisplayManager.swift
core/Sources/MCMonadCore/Focus/: WindowFocus.swift
core/Sources/MCMonadCore/Hotkeys/: HotkeyManager.swift
core/Sources/MCMonadCore/IPC/: CommandExecutor.swift  Protocol.swift  SocketServer.swift
core/Sources/MCMonadCore/Input/: MouseDragHandler.swift  MouseTracker.swift
core/Sources/MCMonadCore/Resources/: Info.plist
core/Sources/MCMonadCore/SkyLight/: SkyLightBindings.swift  SkyLightEventObserver.swift  SkyLightQuery.swift
core/Sources/MCMonadCore/UI/: StatusBarController.swift
example-configs/: cognivore.hs  sway.hs
haskell/: mcmonad.cabal
haskell/app/: Main.hs
haskell/src/: MCMonad.hs
haskell/src/MCMonad/: Config.hs  Core.hs  IPC.hs  Layout.hs  Main.hs  ManageHook.hs  Operations.hs  Sway.hs
haskell/src/MCMonad/Compat/: XMonadContrib.hs
haskell/src/MCMonad/Config/: Keys.hs
haskell/src/MCMonad/Layout/: I3Tree.hs
haskell/tests/: Main.hs  Properties.hs
nix/: app-bundle.nix  home-manager.nix
scripts/: mcmonad-launcher
